fix drop down on mobile

--- a/src/css/Mobile.scss
+++ b/src/css/Mobile.scss
@@ -114,7 +114,7 @@
     }
 
     .cardstack {
-      .stack_btn {
+      .stack_btn.switchview {
         width: calc(var(--card-width) * 0.25);
         height: calc(var(--card-width) * 0.25);
         font-size: calc(var(--card-width) * 0.2);
